# hardware

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  MODERNIZATION_SUMMARY.md  README.md  pyproject.toml  test_inventory.json
data/: electronics_updated_1.jsonld
docs/: BEFORE_AFTER.md  MIGRATION.md
docs/architecture/: mcp-implementation.md  memo.md
docs/dev/: conv_ref.md
docs/examples/: getting-started.md  starter-kit.md  usage-guide.md
src/hardware/: __init__.py
src/hardware/inventory/: __init__.py  cli.py  config.py  models.py  test_api.py  utils.py
src/hardware/mcp/: __init__.py  server.py
src/hardware/projects/: __init__.py  cli.py
src/hardware/resources/: __init__.py  cli.py
tests/: test_config.py  test_crud.py  test_db.py  test_ocr.py  test_ocr_api.py
tests/data/: ascii_circuit.txt  capacitor_component.md  circuit_diagram.mmd  component_json.json  component_table.csv  graphviz_bom.dot  ic_component.md  mixed_components.md  plantuml_inventory.puml  resistor_component.md  yaml_inventory.yaml
tests/fixtures/: README.md
