[project]
name = "hardware"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Matias Ceau", email = "matias@ceau.net" }]
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.4",
    "rich>=14.0.0",
    "types-requests>=2.32.4.20250611",
    "mcp>=1.0.0",
    "sentence-transformers>=3.0.0",
    "openai>=1.0.0",
    "argcomplete>=3.0.0",
    "pytest>=8.0.0",
    "pydantic>=2.11.7",
    "fastmcp>=2.9.2",
    "httpx>=0.27.0",
    "pypandoc>=1.13",
]

[project.scripts]
hardware = "hardware:main"
hardware-inventory = "hardware.inventory.cli:main"
hardware-projects = "hardware.projects.cli:main"
hardware-resources = "hardware.resources.cli:main"
hardware-mcp-server = "hardware.mcp.server:run_server"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
